
Update help screens.
----------------------------------------------------------------------
Tue Jan  6 17:20:29 2004                        Michael Jennings (mej)

Added support for setting hints/hint installer from environment.
----------------------------------------------------------------------
Sat Jan 10 10:07:58 2004                        Michael Jennings (mej)

Install BuildRequires and BuildPrereq's in addition to Hints before
building.
----------------------------------------------------------------------
Wed Jan 14 21:46:23 2004                        Michael Jennings (mej)

Fixes to chroot builds and dependency handling.
----------------------------------------------------------------------
Fri Jan 23 08:30:25 2004                        Michael Jennings (mej)

Working on parallel build fixes.
----------------------------------------------------------------------
Fri Jan 23 19:20:23 2004                        Michael Jennings (mej)

Fixes for parallel chrooted builds.
----------------------------------------------------------------------
Sat Jan 24 20:19:01 2004                        Michael Jennings (mej)

Permissions/ownership fixes for installed files.
----------------------------------------------------------------------
Mon Jan 26 15:44:26 2004                        Michael Jennings (mej)

Added build-as-user option.

Removed unnecessary debugging statements in nuke_tree().

Force ownership in created tarballs to root/root.

Fixed -L option to work.
----------------------------------------------------------------------
Mon Jan 26 17:14:42 2004                        Michael Jennings (mej)

Fixed build as other user for SRPM's.

Cleaned up some debugging output.
----------------------------------------------------------------------
Wed Jan 28 11:11:26 2004                        Michael Jennings (mej)

Added support for importing PDR's.
----------------------------------------------------------------------